--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+3.6.7
+
+- New BidirectionalImmutableGraph wrapper to manage easily a graph
+  and its transpose. Thanks to Antoine Pietri for contributing this
+  class.
+
+- New FixedWidthLongListLabel class. Thanks to Antoine Pietri and
+  Thibault Allançon for contributing this class.  
+
 3.6.6
 
 - Now ScatteredArcsASCIIGraph propagates BatchGraph's copiable iterators.
